...
  android:layout_marginEnd="@dimen/screen_margin_horizontal"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".screens.gamelist.GameListFragment">

  <LinearLayout
    android:id="@+id/empty_game_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

...
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:text="@string/game_list_empty"
      android:textAlignment="center" />

    <Button
      android:id="@+id/join_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="16dp"
      android:text="@string/game_list_join_game_button" />
  </LinearLayout>
...
